8055007: NMT2: emptyStack missing in minimal build

Refactored emptyStack to a static member of NativeCallStack, which is accessible in minimal build.

Reviewed-by: coleenp, dholmes